fix vertical alignment of label in combination with a markdown field

--- a/ui/src/components/Field/Field.css
+++ b/ui/src/components/Field/Field.css
@@ -42,6 +42,7 @@
     font-weight: bold;
     font-size: var(--font-size);
     color: var(--color-8);
+    vertical-align: top;
 }
 
 .kgs-field .field-label.as-block {
